--- a/src/globals.css
+++ b/src/globals.css
@@ -4,6 +4,11 @@
   padding: 0;
 }
 
+a {
+  text-decoration: none;
+  color: white;
+}
+
 header{
     background-color: darkmagenta;
     height: 35px;
@@ -61,8 +66,15 @@ body {
 
 .container{
  display: grid;
- grid-template-columns: repeat(2, 1fr);
+ grid-template-columns: repeat(3, 1fr);
  flex-wrap: wrap;
+ width: 100%;
+}
+
+.img {
+  width: 95%;
+  height: auto;
+  margin-top: 10%;
 }
 
 .container div{
