--- a/src/globals.css
+++ b/src/globals.css
@@ -31,12 +31,13 @@ body {
   
   footer {
     background-color: #333;
-    color: #fff;
+    color: #ffffff;
     text-align: center;
     padding: 1rem;
-    position: fixed;
     bottom: 0;
     width: 100%;
+    height: 50px;
+    margin-top: 50px;
   }
   
   .main {
